# discovery_init

./: Cargo.toml  memory.x  openocd.gdb
.cargo/: config
src/: main.rs
