[package]
name = "discovery-01"
version = "0.1.0"
authors = ["osama"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7.2"      # Access to the generic arm peripherals
cortex-m-rt = "0.6.0"   # Startup code for ARM core
embedded-hal = "0.2.6"  # Access to the generic embedded functions
panic-halt = "0.2.0"    # panic handler

stm32f3xx-hal = { version = "0.8.0", features = ["ld", "rt", "stm32f303xc"] }
